--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,13 @@
             </plugin>
         </plugins>
     </build>
-
+<dependencies>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>5.6.2</version>
+        <scope>test</scope>
+    </dependency>
+</dependencies>
 
 </project>
