--- a/pom.xml
+++ b/pom.xml
@@ -21,16 +21,31 @@
     </build>
 <dependencies>
     <dependency>
-        <groupId>javax.xml.bind</groupId>
-        <artifactId>jaxb-api</artifactId>
-        <version>2.3.1</version>
+        <groupId>jakarta.xml.bind</groupId>
+        <artifactId>jakarta.xml.bind-api</artifactId>
+        <version>2.3.3</version>
     </dependency>
     <dependency>
-        <groupId>org.glassfish.jaxb</groupId>
-        <artifactId>jaxb-runtime</artifactId>
-        <version>2.3.1</version>
+        <groupId>org.eclipse.persistence</groupId>
+        <artifactId>eclipselink</artifactId>
+        <version>3.0.0-M1</version>
+    </dependency>
+    <dependency>
+        <groupId>com.sun.xml.bind</groupId>
+        <artifactId>jaxb-impl</artifactId>
+        <version>2.3.3</version>
         <scope>runtime</scope>
     </dependency>
+<!--    <dependency>-->
+<!--        <groupId>javax.activation</groupId>-->
+<!--        <artifactId>activation</artifactId>-->
+<!--        <version>1.1.1</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--        <groupId>org.glassfish.jaxb</groupId>-->
+<!--        <artifactId>jaxb-runtime</artifactId>-->
+<!--        <version>3.0.0-M4</version>-->
+<!--    </dependency>-->
 </dependencies>
 
 </project>
